# elysium

./: .gitignore  404.html  CHANGELOG.md  NOTICE  README.md  TRADEMARK.md  index.html  mkdocs-designer.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build-binaries.yml  build.yml  docs-designer.yml  docs.yml  input-e2e.yml  release-library.yml
api/: index.html
api/accessibility/: index.html
api/aether/: index.html
api/aether-tools.partial/: index.html
api/ai/: index.html
api/anim/: index.html
api/brush/: index.html
api/charts/: index.html
api/cli/: index.html
api/codelink/: index.html
api/commands/: index.html
api/completer/: index.html
api/components/: index.html
api/concurrency/: index.html
api/dashboard/: index.html
api/dataentry/: index.html
api/daterange/: index.html
api/dialogs/: index.html
api/dnd/: index.html
api/elysium/: index.html
api/events/: index.html
api/focus/: index.html
api/graphics/: index.html
api/grid/: index.html
api/i18n/: index.html
api/input/: index.html
api/layout/: index.html
api/locale/: index.html
api/modelview/: index.html
api/native/: index.html
api/pack/: index.html
api/reactive/: index.html
api/render/: index.html
api/richtext/: index.html
api/scroll/: index.html
api/settings/: index.html
api/shell/: index.html
api/styling/: index.html
api/testing/: index.html
api/text/: index.html
api/theme/: index.html
api/updater/: index.html
api/virtual/: index.html
api/webview/: index.html
api/windowing/: index.html
docs/: CNAME  index.md
docs-designer/: CNAME  glossary.md  index.md  manual-index.md  whats-new.md
docs-designer/aether/: bridge-and-port.md  concepts.md  cookbook.md  getting-started.md  index.md  safety-and-limits.md  tool-reference.md  troubleshooting.md
docs-designer/ai/: aether-enhance.md  extract-and-apply-texture.md  generate-skin.md  index.md  magic-polish.md
docs-designer/animation/: dope-sheet.md  graph-editor.md  index.md  keyframes.md  motion-paths.md  playback-controls.md  trax-and-time-editor.md
docs-designer/borderless/: animated-app-cookbook.md  index.md  shapes.md  transparency-and-titlebar.md
docs-designer/brush/: authoring-custom-brushes.md  brush-studio.md  engines-reference.md  importing-csp-sut.md  importing-photoshop-abr.md  index.md  library-tour.md  native-elybrush-format.md  quick-start.md  touch-and-dynamics.md
docs-designer/code-link/: editor-integrations.md  index.md  pair-and-open.md  scaffold-handlers.md
docs-designer/curves/: index.md  loft-to-mesh.md  nurbs.md
docs-designer/deformers/: bend-twist-sine.md  index.md
docs-designer/exporting/: esk-bundle.md  png-and-svg.md
docs-designer/getting-started/: index.md
docs-designer/hot-reload/: index.md  live-reload.md  preview-skin.md
docs-designer/icon-redesign/: README.md  index.html  manifest.json
docs-designer/importing/: 3d-models.md  canva.md  svg-figma-lottie.md
elysium-lsp/: pyproject.toml
elysium-lsp/src/elysium_lsp/: __init__.py  server.py
elysium-native/: Cargo.toml
elysium-native/crates/ely-core/: Cargo.toml
elysium-native/crates/ely-core/src/: anim.rs  color.rs  display_list.rs  geometry.rs  lib.rs  time.rs
elysium-native/crates/ely-ipc/: Cargo.toml
elysium-native/crates/ely-ipc/src/: auth.rs  framing.rs  lib.rs  messages.rs  server.rs  transport.rs
elysium-native/crates/ely-platform/: Cargo.toml
elysium-native/crates/ely-platform/examples/: winit_smoke.rs
elysium-native/crates/ely-platform/src/: a11y.rs  a11y_bridge.rs  event_loop.rs  input.rs  lib.rs  window.rs
elysium-native/crates/ely-platform/src/platform/: linux.rs  macos.rs  windows.rs
elysium-native/crates/ely-py/: Cargo.toml
elysium-native/crates/ely-py/src/: app.rs  compute.rs  dialogs.rs  display_list.rs  errors.rs  ipc.rs  lib.rs  menu.rs  native_os.rs  path_ops.rs  render.rs  runtime.rs  scene.rs  skia.rs  skin.rs  text.rs  wgsl.rs  window.rs
elysium-native/crates/ely-render/: Cargo.toml
elysium-native/crates/ely-render/src/: compositor.rs  compute_pbr.rs  damage.rs  lib.rs  render_thread.rs  skia_bridge.rs  skia_layer.rs  surface.rs  texture_cache.rs
elysium-native/crates/ely-render/src/effects/: frosted_glass.rs  grain.rs  mod.rs  shadow.rs
elysium-native/crates/ely-render/src/interop/: d3d12.rs  metal.rs  vulkan.rs
elysium-native/crates/ely-render/src/shaders/: frosted_glass.wgsl  pbr_compute.wgsl  skia_blit.wgsl
elysium-native/crates/ely-skin/: Cargo.toml
elysium-native/crates/ely-skin/src/: compile.rs  lib.rs  parser.rs  registry.rs  shader_sandbox.rs  signature.rs  validator.rs
elysium-pycharm/: build.gradle.kts  settings.gradle.kts
elysium-vscode/: package.json
examples/: _close_button.py
getting-started/: index.html
guides/: index.html
marketplace-server/: Dockerfile  server.py
migration/: index.html
patterns/: index.html
recipes/: index.html
schemas/: esk-1.0.json
scripts/: README-builds.md  build-designer.ps1  build-designer.sh  build-example.ps1  build-example.sh  build.py  gen_aether_tool_reference.py  generate-pomodoro-stem-esk.py  knockout-photo-bg.py  prepare-pomodoro-assets.py  render_all_screenshots.py  verify_docs_examples.py
search/: search_index.json
tests/: _api_surface.json  test_a11y_semantics.py  test_butterfly.py  test_charts.py  test_commands.py  test_completer.py  test_concurrency.py  test_dashboard_widgets.py  test_data_app_demos.py  test_dataentry.py  test_datagrid.py  test_deprecation.py  test_dialogs.py  test_dnd.py  test_e2e_flows.py  test_editable_text.py  test_error_paths.py  test_framework_components.py  test_graphics.py  test_i18n.py  test_input_router.py  test_modelview.py  test_native.py  test_os_input.py  test_phase0_enablers.py  test_phase1.py  test_phase2.py  test_phase2_5_audit.py  test_public_api.py  test_qt_parity_integration.py  test_richtext.py  test_scale.py  test_scroll.py  test_settings.py  test_shell.py  test_skin_calc.py  test_smoke.py  test_studio_theme.py  test_styling.py  test_testing_harness.py  (+6 more)
tutorials/: index.html
(+594 files in other folders)
