[build-system]
requires      = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name            = "elysium-ui"
version         = "1.1.2"
description     = "GPU-accelerated, freeform Python UI framework."
readme          = "README.md"
license         = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors         = [{ name = "Elysium UI Contributors" }]
keywords        = ["ui", "gui", "skia", "wgpu", "desktop", "python"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    # Scientific stack — used by the framework's image / brush / paint
    # / PBR / Designer paths and by every example app that touches
    # pixels. Declaring them here ensures `pip install elysium` pulls
    # them in for end-users AND that the PyInstaller build bundles
    # them (PyInstaller can only bundle modules that are importable
    # in the build venv; without these declared, the Designer .exe
    # crashed at launch with ModuleNotFoundError: numpy on Windows).
    "numpy>=1.24",
    "scipy>=1.10",
    "Pillow>=10",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pillow>=10",
    "mypy>=1.10",
    "ruff>=0.6",
]
ai = [
    "anthropic>=0.34",
    "openai>=1.40",
]
build = [
    "pyinstaller>=6",
    "maturin>=1.7,<2",
]

[project.urls]
Documentation = "https://docs.elysium.dev"
Repository    = "https://github.com/elysiumui/elysium"

[project.scripts]
elysium = "elysium.cli:main"

[project.entry-points."pyinstaller40"]
hook-dirs = "elysium.__pyinstaller:get_hook_dirs"
tests     = "elysium.__pyinstaller:get_PyInstaller_tests"

[tool.maturin]
manifest-path        = "elysium-native/crates/ely-py/Cargo.toml"
module-name          = "elysium._native._native"
python-source        = "python"
features             = ["pyo3/extension-module"]
# maturin auto-declares License-File: LICENSE/NOTICE in the metadata but does
# not add them to the sdist archive (manifest-path lives in a subdir); PyPI
# rejects sdists whose declared license files are missing. Include explicitly.
include              = [
    { path = "LICENSE", format = "sdist" },
    { path = "NOTICE",  format = "sdist" },
]
# strip = true   (disabled — conflicts with maturin develop's implicit
# --include-debuginfo; re-enable for release wheels via env override.)

[tool.pytest.ini_options]
testpaths = ["tests", "python/elysium"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
