[package]
name             = "ely-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
parking_lot       = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror         = { workspace = true }
serde             = { workspace = true }
tracing           = { workspace = true }
