[package]
name             = "ely-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ely-core    = { path = "../ely-core" }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
notify      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
bytes       = { workspace = true }
futures     = { workspace = true }
parking_lot = { workspace = true }
